--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
-<html>
-  <head>
-    <title>My blog</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />  
+  <title>Jennifer Harper's Website</title>
+  <link rel="icon" href="img/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="styles/main.css" />
+  
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <div class="" id="navigation">
+      <div class="logo">
+        <figure>
+          <a href="/">
+          <svg x="0px" y="0px" viewBox="0 0 2000 1500">
+          <path d="M960.4,214.5c-295.3,0-534.7,241.6-534.7,536.9s239.4,534.7,534.7,534.7s534.7-239.4,534.7-534.7S1255.7,214.5,960.4,214.5z
+            M893.3,489.7h134.2v387H893.3V489.7z M714.4,489.7h134.2v94H714.4C714.4,583.6,714.4,489.7,714.4,489.7z M848.6,887.9
+            c0,40.3-8.9,69.4-24.6,89.5c-17.9,22.4-49.2,33.6-89.5,33.6h-20.1V624h134.2L848.6,887.9L848.6,887.9z M1206.5,1013.2H893.3v-91.7
+            h313.2V1013.2z M1206.5,878.9H1070v-255h22.4c60.4,0,96.2,20.1,109.6,62.6c4.5,13.4,6.7,29.1,6.7,47v145.4H1206.5z"/>
+          </svg>
+          </a>
+        </figure>
+      </div>
+      <div class="navLinks">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Blog</a></li>
+        </ul>
+      </div>
+
+
+
+    </div>
+    <div class="intro home">
+      <h1>Kia ora Taiao! (Hello World!)</h1> 
+      <p> This is the beginning of my website home page.</p>
+      <p> It will eventually contain a list of links to all my blogs. </p>
+    </div>
   </body>
 </html>
