--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <div class="navLinks">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="/blog">Blog</a></li>
         </ul>
       </div>
 
