Add style changes

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           
         </div>
         <div>
-          <h1>Kia ora Taiao! <br/>(Hello World!)</h1> 
-          <p>Dev Academy 2023, reflections and blog posts <a href="/blog">&#x2192;</a></p>
+          <h1>Kia ora Taiao!</h1> 
+          <p><a href="/blog">Dev Academy 2023, reflections and blog posts <span>&#x2192;</span></a></p>
         </div>
       </div>
     </div>
