adding link to main.css

--- a/challenges/00_base/index.html
+++ b/challenges/00_base/index.html
@@ -30,16 +30,7 @@
     </div>
 
 
-    <div class="overflow-wrapper maths">
-      <div>
-        <h2> Is the number prime or composite? What are its prime factors?</h2>
-        <p> Please enter a positive whole number</p>
-        <input id="userInput">
-        <button id="userEnter">Enter</button>
-
-       <p>Prime or Composite: <span id="response"></span></p>
-       <p>Prime factors: <span id="responsePrime"></span></p>
-      </div>
+    <div class="overflow-wrapper">
     
     </div>
 <!-- 
