House keep ing tidy up

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -5,11 +5,10 @@
   <meta name="description" content="">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />  
-  <title>Jennifer Harper's Website</title>
-  <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <title>Challenges Jennifer Harper</title>
+  <link rel="icon" href="../img/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="../../css/styles.css" />
 </head>
-
 <body>
   <div class="" id="navigation">
     <div class="logo">
@@ -32,20 +31,17 @@
       </ul>
     </div>
   </div>
+  <div class="intro challenges">
+    <h1>challenges home page</h1>  
 
-  <div class="intro home">      
-    <div class="wrapper">
+    <div class="wrapper challenges">
       <div>
-        <figure class="me">
-          <img src="img/profile-circle.jpg" alt="Photo of me" >
-        </figure>
+        <h2><a href="/challenges/prime_factors/index.html" target="_blank">Prime Factors</a></h2>
       </div>
       <div>
-        <h1>Kia ora Taiao!</h1> 
-        <p><a href="/blog">Dev Academy 2023, reflections and blog posts <span>&#x2192;</span></a></p>
+        <h2><a href="/challenges/uniqueCharacters/index.html" target="_blank">Unique Characters</a></h2>
       </div>
     </div>
   </div>
-  
 </body>
 </html>
