Add reverse challange and fix base

--- a/challenges/reverse_words/index.html
+++ b/challenges/reverse_words/index.html
@@ -40,15 +40,15 @@
 
     <div>
       <div class="intro challenge">
-        <div class="overflow-wrapper name">
-          <h2>task</h2>
+        <div class="overflow-wrapper reverse">
+          <h2>Write a function that will take a given string and reverse the order of the words.</h2>
           <p> Please add your text</p>
           <div>
             <input type="textarea" id="userInput">
             <button id="userEnter">Enter</button>
           </div> 
-         <p>xx: <span id="original"></span></p>
-         <p>xx: <span id="answer"></span></p>
+         <p>Original string: <span id="original"></span></p>
+         <p>Reverse answer: <span id="reverseAnswer"></span></p>
         </div> 
       </div>   
     </div>
