Add reverse words url to challanges index

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -41,6 +41,9 @@
       <div>
         <h2><a href="/challenges/uniqueCharacters/index.html" target="_blank">Unique Characters</a></h2>
       </div>
+      <div>
+        <h2><a href="/challenges/reverse_words/index.html" target="_blank">Reverse Words</a></h2>
+      </div>
     </div>
   </div>
 </body>
