add anagram challenge

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -44,6 +44,10 @@
       <div>
         <h2><a href="/challenges/reverse_words/index.html" target="_blank">Reverse Words</a></h2>
       </div>
+
+      <div>
+        <h2><a href="/challenges/anagram/index.html" target="_blank">Anagram</a></h2>
+      </div>
     </div>
   </div>
 </body>
