building profile, changed style and content

--- a/index.html
+++ b/index.html
@@ -26,26 +26,30 @@
     </div>
     <div class="navLinks">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/challenges">Challenges</a></li>
+        <li><a href="https://github.com/jennifer-harper" target="_blank">GitHub</a></li>
+        <li><a href="mailto:harper.jens@gmail.com">harper.jens@gmail.com</a></li>
       </ul>
     </div>
   </div>
 
   <div class="intro home">      
     <div class="wrapper">
-      <div>
-        <figure class="me">
-          <img src="img/profile-circle.jpg" alt="Photo of me" >
-        </figure>
+      <div class="visual">
+        <div>
+          <figure class="me media-box">
+            <img src="img/jennifer-harper.jpg" alt="Photo of me" >
+          </figure>
+          <img src="img/dev-academy-logo.jpg" alt="Dev Academy logo" class="dev-logo" >
+        </div>
       </div>
-      <div>
-        <h1>Kia ora Taiao!</h1> 
-        <p><a href="/blog">Dev Academy 2023, reflections and blog posts <span>&#x2192;</span></a></p>
-      </div>
+
+      <div class="content">
+        <h1>Kia ora Taiao!</h1>           
+        <p>I'm Jennifer Harper, a former intermediate web designer with an interest in building innovative apps and interfaces. After spending six years abroad I enrolled at Dev Academy Aotearoa to expand my technical skills and transition to a developer role. In just nine intensive weeks I gained full-stack skills and a strong drive for ongoing learning. I'm eager to re-enter the industry, use my experience, and build awesome apps every day. Below you'll find a mix of group work and personal projects, or checkout my <a href="https://jenniferharper.github.io/portfolio/" target="_blank"> web designer portfolio.</a></p>
+     </div>
     </div>
   </div>
   
 </body>
 </html>
+
