--- a/index.html
+++ b/index.html
@@ -49,7 +49,31 @@
      </div>
     </div>
   </div>
-  
+
+
+  <div class="portfolio">
+    <div class="zoltash">
+      <div class="visual">
+        <div>
+          <figure class="">
+            <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="hand">
+          </figure>
+        </div>
+      </div>
+      <div class="content">
+        <div>
+          <p>Week Two, First Group Project </p>
+          <h2>The Wisdom of Zoltash</h2>
+          <p>Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time, expanding the user experience with additional categories.</p>
+
+          <button class="github">
+            <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://kit.fontawesome.com/b3510dc66a.js" crossorigin="anonymous"></script>
 </body>
 </html>
 
