--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 
       <div class="content">
         <h1>Kia ora Taiao!</h1>           
-        <p>I'm Jennifer Harper, a former intermediate web designer with an interest in building innovative apps and interfaces. After spending six years abroad I enrolled at Dev Academy Aotearoa to expand my technical skills and transition to a developer role. In just nine intensive weeks I gained full-stack skills and a strong drive for ongoing learning. I'm eager to re-enter the industry, use my experience, and build awesome apps every day. Below you'll find a mix of group work and personal projects, or checkout my <a href="https://jenniferharper.github.io/portfolio/" target="_blank"> web designer portfolio.</a></p>
+        <p>I'm Jennifer Harper, a intermediate web designer with an interest in innovative apps and interfaces. After spending six years abroad I enrolled at Dev Academy Aotearoa to expand my technical skills and transition to a developer role. In just nine intensive weeks I gained full-stack skills and a drive for ongoing learning. I'm eager to re-enter the industry, use my experience and build awesome apps every day. Below you'll find a mix of group work and personal projects, or checkout my <a href="https://jenniferharper.github.io/portfolio/" target="_blank"> web designer portfolio.</a></p>
      </div>
     </div>
   </div>
 
 
   <div class="portfolio">
-    <div class="zoltash">
+    <div class="project zoltash">
       <div class="visual">
         <div>
           <figure class="">
-            <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="hand">
+            <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="main-vis">
           </figure>
         </div>
       </div>
@@ -66,13 +66,65 @@
           <h2>The Wisdom of Zoltash</h2>
           <p>Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time, expanding the user experience with additional categories.</p>
 
+          <a href="https://github.com/jennifer-harper/zoltash-fortune/" target="_blank">
           <button class="github">
             <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
           </button>
+        </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project assets">
+      <div class="visual">
+        <div>
+          <figure class="">
+            <img src="img/cow.svg" alt="SVG graphic of cows behind" class="main-vis">
+          </figure>
+        </div>
+      </div>
+      <div class="content">
+        <div>
+          <p>Week Four, Friday Group Project </p>
+          <h2>Know your ASSets</h2>
+          <p>"Know Your ASSets" was built to apply our new skills in client-side rendering with React (with Typescript), composing UI components, managing component states, and event handling. We created a silly game with farm animals fart sounds and dynamic CSS changes to their semi-transparent fart clouds. The game showcased our ability to work together as a team and apply our new skills in an entertaining and playful way. Overall, "Know Your ASSets" was a valuable learning opportunity that helped us hone our development skills while having fun.</p>
+
+
+          <a href="https://github.com/kahu-2023/know-ur-ASSetts" target="_blank">
+          <button class="github">
+            <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
+          </button>
+        </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project buddy">
+      <div class="visual">
+        <div>
+          <figure class="">
+            <img src="img/buddy.jpg" alt="Buddy app mockup" class="main-vis">
+          </figure>
+        </div>
+      </div>
+      <div class="content">
+        <div>
+          <p>Week Eight, Final Project </p>
+          <h2>Buddy</h2>
+          <p>Our final project involved 7 team members and 6 days. Buddy is  an app designed to connect international students with New Zealand locals, providing opportunities to make friends and be introduced to NZ culture. This project gave us the chance to put everything we had learnt over the previous eight weeks into action. Our React app needed profiles with CRUD functionality, and a AuthO login setup. Only registered users with profiles have access to seeing other users, and only be able to edit their own profile. Working with a large team proved to be challenging but we managed to achieve our MVP and present our project on showcase night.</p>
+
+          <a href="https://github.com/kahu-2023/buddy" class="github" target="_blank">
+          <button class="github">
+            <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
+          </button>
+        </a>
         </div>
       </div>
     </div>
   </div>
+
+
+
   <script src="https://kit.fontawesome.com/b3510dc66a.js" crossorigin="anonymous"></script>
 </body>
 </html>
