--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
     </div>
     <div class="navLinks">
       <ul>
-        <li><a href="https://github.com/jennifer-harper" target="_blank">GitHub</a></li>
-        <li><a href="mailto:harper.jens@gmail.com">harper.jens@gmail.com</a></li>
+        <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a></li>
+        <li><a href="https://github.com/jennifer-harper" target="_blank"> <i class="fa-brands fa-linkedin fa-lg"></i></a></li>
+       
+        <li>
+          <a href="img/jennifer-harper-cv.pdf" target="_blank">
+          <svg  x="0px" y="0px" viewBox="0 0 50 50">
+            <path d="M25,0.4C11.4,0.4,0.3,11.4,0.3,25.1c0,13.6,11.1,24.7,24.7,24.7s24.7-11.1,24.7-24.7C49.7,11.4,38.7,0.4,25,0.4z M21.8,32.1
+              c-0.5,0.5-1.2,1-1.8,1.4c-0.7,0.4-1.4,0.7-2.2,0.9c-0.8,0.2-1.5,0.3-2.2,0.3c-1.3,0-2.5-0.3-3.6-0.9c-1.1-0.6-2-1.3-2.8-2.2
+              c-0.8-0.9-1.4-2-1.8-3.1c-0.4-1.2-0.7-2.3-0.7-3.6c0-1.1,0.2-2.3,0.6-3.4c0.4-1.1,1-2.1,1.8-3c0.8-0.9,1.7-1.6,2.8-2.2
+              c1.1-0.6,2.4-0.8,3.8-0.8c1.7,0,3.1,0.4,4.3,1.1c1.2,0.8,2.1,1.8,2.7,3l-1.9,1.2c-0.3-0.6-0.6-1.1-1-1.5c-0.4-0.4-0.8-0.7-1.3-1
+              c-0.5-0.2-1-0.4-1.4-0.5c-0.5-0.1-1-0.2-1.5-0.2c-1,0-2,0.2-2.8,0.7c-0.8,0.4-1.5,1-2,1.7c-0.6,0.7-1,1.5-1.2,2.4
+              c-0.3,0.9-0.4,1.8-0.4,2.6c0,1,0.2,1.9,0.5,2.8c0.3,0.9,0.8,1.7,1.4,2.4c0.6,0.7,1.3,1.2,2.1,1.7c0.8,0.4,1.7,0.6,2.6,0.6
+              c0.5,0,1-0.1,1.5-0.2c0.5-0.1,1-0.3,1.5-0.6c0.5-0.3,0.9-0.6,1.3-1c0.4-0.4,0.8-0.9,1-1.5l2,1.1C22.8,31,22.4,31.6,21.8,32.1z
+               M34.1,34.5h-2.1l-7.7-18.9h2.5l6.3,15.9l6.2-15.9h2.5L34.1,34.5z"/>
+            </svg>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
@@ -68,7 +83,7 @@
 
           <a href="https://github.com/jennifer-harper/zoltash-fortune/" target="_blank">
           <button class="github">
-            <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
+            <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
           </button>
         </a>
         </div>
@@ -92,7 +107,7 @@
 
           <a href="https://github.com/kahu-2023/know-ur-ASSetts" target="_blank">
           <button class="github">
-            <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
+            <i class="fa-brands fa-github fa-lg"></i> <p>See some assets on GitHub</p>
           </button>
         </a>
         </div>
@@ -115,11 +130,47 @@
 
           <a href="https://github.com/kahu-2023/buddy" class="github" target="_blank">
           <button class="github">
-            <i class="fa-brands fa-github fa-lg"></i> <p>See this this on GitHub</p>
+            <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
           </button>
         </a>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="intro">      
+    <div class="wrapper">
+      <div class="visual cta">
+        <div>
+          <figure class="me media-box">
+            <img src="img/team.jpg" alt="Kahu cohort 2023, Dev Academy" >
+          </figure>
+        </div>
+      </div>
+
+      <div class="content cta">
+        <h2>Ka kite ano</h2>           
+        <p>Thanks for taking the time to view my work. I'm currently looking for a new dev adventure, please get in touch if you feel like having a chat.</p>
+        <ul>
+          <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></li>
+          <li><a href="https://github.com/jennifer-harper" target="_blank"> <i class="fa-brands fa-linkedin fa-xl"></i></a></li>
+         
+          <li>
+            <a href="img/jennifer-harper-cv.pdf" target="_blank">
+            <svg  x="0px" y="0px" viewBox="0 0 50 50">
+              <path d="M25,0.4C11.4,0.4,0.3,11.4,0.3,25.1c0,13.6,11.1,24.7,24.7,24.7s24.7-11.1,24.7-24.7C49.7,11.4,38.7,0.4,25,0.4z M21.8,32.1
+                c-0.5,0.5-1.2,1-1.8,1.4c-0.7,0.4-1.4,0.7-2.2,0.9c-0.8,0.2-1.5,0.3-2.2,0.3c-1.3,0-2.5-0.3-3.6-0.9c-1.1-0.6-2-1.3-2.8-2.2
+                c-0.8-0.9-1.4-2-1.8-3.1c-0.4-1.2-0.7-2.3-0.7-3.6c0-1.1,0.2-2.3,0.6-3.4c0.4-1.1,1-2.1,1.8-3c0.8-0.9,1.7-1.6,2.8-2.2
+                c1.1-0.6,2.4-0.8,3.8-0.8c1.7,0,3.1,0.4,4.3,1.1c1.2,0.8,2.1,1.8,2.7,3l-1.9,1.2c-0.3-0.6-0.6-1.1-1-1.5c-0.4-0.4-0.8-0.7-1.3-1
+                c-0.5-0.2-1-0.4-1.4-0.5c-0.5-0.1-1-0.2-1.5-0.2c-1,0-2,0.2-2.8,0.7c-0.8,0.4-1.5,1-2,1.7c-0.6,0.7-1,1.5-1.2,2.4
+                c-0.3,0.9-0.4,1.8-0.4,2.6c0,1,0.2,1.9,0.5,2.8c0.3,0.9,0.8,1.7,1.4,2.4c0.6,0.7,1.3,1.2,2.1,1.7c0.8,0.4,1.7,0.6,2.6,0.6
+                c0.5,0,1-0.1,1.5-0.2c0.5-0.1,1-0.3,1.5-0.6c0.5-0.3,0.9-0.6,1.3-1c0.4-0.4,0.8-0.9,1-1.5l2,1.1C22.8,31,22.4,31.6,21.8,32.1z
+                 M34.1,34.5h-2.1l-7.7-18.9h2.5l6.3,15.9l6.2-15.9h2.5L34.1,34.5z"/>
+              </svg>
+            </a>
+          </li>
+        </ul>
+     </div>
     </div>
   </div>
 
