Updated copy content

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="content">
         <h1>Kia ora Taiao!</h1>           
-        <p>I'm Jennifer Harper, a intermediate web designer with an interest in innovative apps and interfaces. After spending six years abroad I enrolled at Dev Academy Aotearoa to expand my technical skills and transition to a developer role. In just nine intensive weeks I gained full-stack skills and a drive for ongoing learning. I'm eager to re-enter the industry, use my experience and build awesome apps every day. Below you'll find a mix of group work and personal projects, or checkout my <a href="https://jenniferharper.github.io/portfolio/" target="_blank"> web designer portfolio.</a></p>
+        <p>I'm Jennifer Harper, a intermediate web designer with an interest in innovative apps and interfaces. In January 2023, after spending six years abroad, I enrolled at Dev Academy Aotearoa to expand my technical skills and transition to a developer role. In just nine intensive weeks I've gained full-stack skills and a drive for ongoing learning. I'm eager to re-enter the industry as a developer, use my experience and build awesome apps every day. Below you'll find a mix of group work and personal projects, or checkout my <a href="https://jenniferharper.github.io/portfolio/" target="_blank"> web designer portfolio.</a></p>
      </div>
     </div>
   </div>
