fix incorrect links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="navLinks">
       <ul>
         <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a></li>
-        <li><a href="https://github.com/jennifer-harper" target="_blank"> <i class="fa-brands fa-linkedin fa-lg"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/jennifer-harper-nz/" target="_blank"> <i class="fa-brands fa-linkedin fa-lg"></i></a></li>
        
         <li>
           <a href="img/jennifer-harper-cv.pdf" target="_blank">
@@ -81,7 +81,7 @@
           <h2>The Wisdom of Zoltash</h2>
           <p>Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time, expanding the user experience with additional categories.</p>
 
-          <a href="https://github.com/jennifer-harper/zoltash-fortune/" target="_blank">
+          <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank">
           <button class="github">
             <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
           </button>
@@ -153,7 +153,7 @@
         <p>Thanks for taking the time to view my work. I'm currently looking for a new dev adventure, please get in touch if you feel like having a chat.</p>
         <ul>
           <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></li>
-          <li><a href="https://github.com/jennifer-harper" target="_blank"> <i class="fa-brands fa-linkedin fa-xl"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/jennifer-harper-nz/" target="_blank"> <i class="fa-brands fa-linkedin fa-xl"></i></a></li>
          
           <li>
             <a href="img/jennifer-harper-cv.pdf" target="_blank">
