add zoltash deployed button

--- a/index.html
+++ b/index.html
@@ -81,11 +81,20 @@
           <h2>The Wisdom of Zoltash</h2>
           <p>Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time, expanding the user experience with additional categories.</p>
 
-          <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank">
-          <button class="github">
-            <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
-          </button>
-        </a>
+          <div>
+            <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank">
+              <button class="github">
+                <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
+              </button>
+            </a>
+            <a href="https://wisdom-of-zoltash.up.railway.app/" target="_blank">
+              <button class="deployed">
+                <i class="fa-solid fa-globe"></i> <p>Deployed site</p>
+              </button>
+            </a>
+          </div>
+
+        
         </div>
       </div>
     </div>
