--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class="navLinks">
       <ul>
         <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/jennifer-harper-nz/" target="_blank"> <i class="fa-brands fa-linkedin fa-lg"></i></a></li>
+        <!-- <li><a href="https://www.linkedin.com/in/jennifer-harper-nz/" target="_blank"> <i class="fa-brands fa-linkedin fa-lg"></i></a></li> -->
        
         <li>
-          <a href="img/jennifer-harper-cv.pdf" target="_blank">
+          <!-- <a href="img/jennifer-harper-cv.pdf" target="_blank"> -->
           <svg  x="0px" y="0px" viewBox="0 0 50 50">
             <path d="M25,0.4C11.4,0.4,0.3,11.4,0.3,25.1c0,13.6,11.1,24.7,24.7,24.7s24.7-11.1,24.7-24.7C49.7,11.4,38.7,0.4,25,0.4z M21.8,32.1
               c-0.5,0.5-1.2,1-1.8,1.4c-0.7,0.4-1.4,0.7-2.2,0.9c-0.8,0.2-1.5,0.3-2.2,0.3c-1.3,0-2.5-0.3-3.6-0.9c-1.1-0.6-2-1.3-2.8-2.2
@@ -160,7 +160,7 @@
       <div class="content cta">
         <h2>Ka kite ano</h2>           
         <p>Thanks for taking the time to view my work. I'm currently looking for a new dev adventure, please get in touch if you feel like having a chat.</p>
-        <ul>
+        <!-- <ul>
           <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></li>
           <li><a href="https://www.linkedin.com/in/jennifer-harper-nz/" target="_blank"> <i class="fa-brands fa-linkedin fa-xl"></i></a></li>
          
@@ -178,7 +178,7 @@
               </svg>
             </a>
           </li>
-        </ul>
+        </ul> -->
      </div>
     </div>
   </div>
