text index.html

--- a/dev-academy/index.html
+++ b/dev-academy/index.html
@@ -8,6 +8,7 @@
   <title>Jennifer Harper's Website</title>
   <link rel="icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <meta http-equiv="refresh" content="0; url=/dev-academy">
 </head>
 
 <body>
