--- a/dev-academy/index.html
+++ b/dev-academy/index.html
@@ -1,154 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />  
-  <title>Jennifer Harper's Website</title>
-  <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
+    <title>Jennifer Harper's Website</title>
+    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  </head>
 
-</head>
-
-<body>
-  <div class="" id="navigation">
-    <div class="logo">
-      <figure>
-        <a href="/">
-        <svg x="0px" y="0px" viewBox="0 0 2000 1500">
-        <path d="M960.4,214.5c-295.3,0-534.7,241.6-534.7,536.9s239.4,534.7,534.7,534.7s534.7-239.4,534.7-534.7S1255.7,214.5,960.4,214.5z
-          M893.3,489.7h134.2v387H893.3V489.7z M714.4,489.7h134.2v94H714.4C714.4,583.6,714.4,489.7,714.4,489.7z M848.6,887.9
-          c0,40.3-8.9,69.4-24.6,89.5c-17.9,22.4-49.2,33.6-89.5,33.6h-20.1V624h134.2L848.6,887.9L848.6,887.9z M1206.5,1013.2H893.3v-91.7
-          h313.2V1013.2z M1206.5,878.9H1070v-255h22.4c60.4,0,96.2,20.1,109.6,62.6c4.5,13.4,6.7,29.1,6.7,47v145.4H1206.5z"/>
-        </svg>
-        </a>
-      </figure>
-    </div>
-    <div class="navLinks">
-      <ul>
-        <li><a href="https://github.com/jennifer-harper" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a></li>
-        <!-- <li><a href="https://www.linkedin.com/in/jennifer-harper-nz/" target="_blank"> <i class="fa-brands fa-linkedin fa-lg"></i></a></li> -->
-       
-        <li>
-          <!-- <a href="img/jennifer-harper-cv.pdf" target="_blank"> -->
-          <svg  x="0px" y="0px" viewBox="0 0 50 50">
-            <path d="M25,0.4C11.4,0.4,0.3,11.4,0.3,25.1c0,13.6,11.1,24.7,24.7,24.7s24.7-11.1,24.7-24.7C49.7,11.4,38.7,0.4,25,0.4z M21.8,32.1
-              c-0.5,0.5-1.2,1-1.8,1.4c-0.7,0.4-1.4,0.7-2.2,0.9c-0.8,0.2-1.5,0.3-2.2,0.3c-1.3,0-2.5-0.3-3.6-0.9c-1.1-0.6-2-1.3-2.8-2.2
-              c-0.8-0.9-1.4-2-1.8-3.1c-0.4-1.2-0.7-2.3-0.7-3.6c0-1.1,0.2-2.3,0.6-3.4c0.4-1.1,1-2.1,1.8-3c0.8-0.9,1.7-1.6,2.8-2.2
-              c1.1-0.6,2.4-0.8,3.8-0.8c1.7,0,3.1,0.4,4.3,1.1c1.2,0.8,2.1,1.8,2.7,3l-1.9,1.2c-0.3-0.6-0.6-1.1-1-1.5c-0.4-0.4-0.8-0.7-1.3-1
-              c-0.5-0.2-1-0.4-1.4-0.5c-0.5-0.1-1-0.2-1.5-0.2c-1,0-2,0.2-2.8,0.7c-0.8,0.4-1.5,1-2,1.7c-0.6,0.7-1,1.5-1.2,2.4
-              c-0.3,0.9-0.4,1.8-0.4,2.6c0,1,0.2,1.9,0.5,2.8c0.3,0.9,0.8,1.7,1.4,2.4c0.6,0.7,1.3,1.2,2.1,1.7c0.8,0.4,1.7,0.6,2.6,0.6
-              c0.5,0,1-0.1,1.5-0.2c0.5-0.1,1-0.3,1.5-0.6c0.5-0.3,0.9-0.6,1.3-1c0.4-0.4,0.8-0.9,1-1.5l2,1.1C22.8,31,22.4,31.6,21.8,32.1z
-               M34.1,34.5h-2.1l-7.7-18.9h2.5l6.3,15.9l6.2-15.9h2.5L34.1,34.5z"/>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="intro home">      
-    <div class="wrapper">
-      <div class="visual">
-        <div>
-          <figure class="me media-box">
-            <img src="img/jennifer-harper.jpg" alt="Photo of me" >
-          </figure>
-          <img src="img/dev-academy-logo.jpg" alt="Dev Academy logo" class="dev-logo" >
-        </div>
-      </div>
-
-      <div class="content">
-        <h1>Kia ora Taiao!</h1>           
-
-     </div>
-    </div>
-  </div>
-
-
-  <div class="portfolio">
-    <div class="project zoltash">
-      <div class="visual">
-        <div>
-          <figure class="">
-            <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="main-vis">
-          </figure>
-        </div>
-      </div>
-      <div class="content">
-        <div>
-          <p>Week Two, First Group Project </p>
-          <h2>The Wisdom of Zoltash</h2>
-          <p>Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time, expanding the user experience with additional categories.</p>
-
+  <body>
+    <div class="portfolio">
+      <div class="project zoltash">
+        <div class="visual">
           <div>
-            <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank">
+            <figure class="">
+              <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="main-vis" />
+            </figure>
+          </div>
+        </div>
+        <div class="content">
+          <div>
+            <p>Week Two, First Group Project</p>
+            <h2>The Wisdom of Zoltash</h2>
+            <p>
+              Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and
+              JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time,
+              expanding the user experience with additional categories.
+            </p>
+
+            <div>
+              <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank">
+                <button class="github">
+                  <i class="fa-brands fa-github fa-lg"></i>
+                  <p>See more on GitHub</p>
+                </button>
+              </a>
+              <a href="https://wisdom-of-zoltash.up.railway.app/" target="_blank">
+                <button class="deployed">
+                  <i class="fa-solid fa-globe"></i>
+                  <p>Deployed site</p>
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="project assets">
+        <div class="visual">
+          <div>
+            <figure class="">
+              <img src="img/cow.svg" alt="SVG graphic of cows behind" class="main-vis" />
+            </figure>
+          </div>
+        </div>
+        <div class="content">
+          <div>
+            <p>Week Four, Friday Group Project</p>
+            <h2>Know your ASSets</h2>
+            <p>
+              "Know Your ASSets" was built to apply our new skills in client-side rendering with React (with Typescript), composing UI components, managing component states, and event handling. We created a silly game with farm animals fart sounds and dynamic CSS changes to their semi-transparent
+              fart clouds. The game showcased our ability to work together as a team and apply our new skills in an entertaining and playful way. Overall, "Know Your ASSets" was a valuable learning opportunity that helped us hone our development skills while having fun.
+            </p>
+
+            <a href="https://github.com/kahu-2023/know-ur-ASSetts" target="_blank">
               <button class="github">
-                <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
-              </button>
-            </a>
-            <a href="https://wisdom-of-zoltash.up.railway.app/" target="_blank">
-              <button class="deployed">
-                <i class="fa-solid fa-globe"></i> <p>Deployed site</p>
+                <i class="fa-brands fa-github fa-lg"></i>
+                <p>See some assets on GitHub</p>
               </button>
             </a>
           </div>
+        </div>
+      </div>
 
-        
+      <div class="project buddy">
+        <div class="visual">
+          <div>
+            <figure class="">
+              <img src="img/buddy.jpg" alt="Buddy app mockup" class="main-vis" />
+            </figure>
+          </div>
+        </div>
+        <div class="content">
+          <div>
+            <p>Week Eight, Final Project</p>
+            <h2>Buddy</h2>
+            <p>
+              Our final project involved 7 team members and 6 days. Buddy is an app designed to connect international students with New Zealand locals, providing opportunities to make friends and be introduced to NZ culture. This project gave us the chance to put everything we had learnt over the
+              previous eight weeks into action. Our React app needed profiles with CRUD functionality, and a AuthO login setup. Only registered users with profiles have access to seeing other users, and only be able to edit their own profile. Working with a large team proved to be challenging but we
+              managed to achieve our MVP and present our project on showcase night.
+            </p>
+
+            <a href="https://github.com/kahu-2023/buddy" class="github" target="_blank">
+              <button class="github">
+                <i class="fa-brands fa-github fa-lg"></i>
+                <p>See more on GitHub</p>
+              </button>
+            </a>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="project assets">
-      <div class="visual">
-        <div>
-          <figure class="">
-            <img src="img/cow.svg" alt="SVG graphic of cows behind" class="main-vis">
-          </figure>
-        </div>
-      </div>
-      <div class="content">
-        <div>
-          <p>Week Four, Friday Group Project </p>
-          <h2>Know your ASSets</h2>
-          <p>"Know Your ASSets" was built to apply our new skills in client-side rendering with React (with Typescript), composing UI components, managing component states, and event handling. We created a silly game with farm animals fart sounds and dynamic CSS changes to their semi-transparent fart clouds. The game showcased our ability to work together as a team and apply our new skills in an entertaining and playful way. Overall, "Know Your ASSets" was a valuable learning opportunity that helped us hone our development skills while having fun.</p>
-
-
-          <a href="https://github.com/kahu-2023/know-ur-ASSetts" target="_blank">
-          <button class="github">
-            <i class="fa-brands fa-github fa-lg"></i> <p>See some assets on GitHub</p>
-          </button>
-        </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project buddy">
-      <div class="visual">
-        <div>
-          <figure class="">
-            <img src="img/buddy.jpg" alt="Buddy app mockup" class="main-vis">
-          </figure>
-        </div>
-      </div>
-      <div class="content">
-        <div>
-          <p>Week Eight, Final Project </p>
-          <h2>Buddy</h2>
-          <p>Our final project involved 7 team members and 6 days. Buddy is  an app designed to connect international students with New Zealand locals, providing opportunities to make friends and be introduced to NZ culture. This project gave us the chance to put everything we had learnt over the previous eight weeks into action. Our React app needed profiles with CRUD functionality, and a AuthO login setup. Only registered users with profiles have access to seeing other users, and only be able to edit their own profile. Working with a large team proved to be challenging but we managed to achieve our MVP and present our project on showcase night.</p>
-
-          <a href="https://github.com/kahu-2023/buddy" class="github" target="_blank">
-          <button class="github">
-            <i class="fa-brands fa-github fa-lg"></i> <p>See more on GitHub</p>
-          </button>
-        </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://kit.fontawesome.com/b3510dc66a.js" crossorigin="anonymous"></script>
-</body>
+    <script src="https://kit.fontawesome.com/b3510dc66a.js" crossorigin="anonymous"></script>
+  </body>
 </html>
-
