--- a/index.html
+++ b/index.html
@@ -56,49 +56,57 @@
 
     <main class="p-[20px] md:p-[6vw]">
       <section class="" id="dev-academy">
-        <a href="/dev-academy/" target="_blank" class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center w-full group">
+        <a href="/dev-academy/" target="_blank" class="flex flex-col py-[20px] md:py-[6vw] text-center items-center w-full group">
           <p class="text-lg pb-[2vw] uppercase">Jan - April 2023</p>
           <h2 class="pb-[4vw] text-2xl md:text-8xl leading-[1.1]"><span>Dev Academy</span> Aotearoa</h2>
           <p class="md:w-[80%]">
             In January 2023, after spending six years abroad, I enrolled at Dev Academy Aotearoa to expand my technical skills and transition to a developer role. In just 17 intensive weeks I graduated with React skills, confidence with Javascript and a new understanding for peer programming.
           </p>
-          <div class="flex flex-row text-center items-center align-center mt-[2vw]">
-            <p class="group-hover:text-red-700 text-1xl uppercase">See my favourite projects</p>
-            <svg width="24" height="24" viewBox="0 0 24 24" class="w-[40px] h-[40px] fill-[#040433] group-hover:fill-red-700 ps-[1vw]">
-              <path d="M11.999 1.993c-5.514.001-10 4.487-10 10.001s4.486 10 10.001 10c5.513 0 9.999-4.486 10-10 0-5.514-4.486-10-10.001-10.001zM12 19.994c-4.412 0-8.001-3.589-8.001-8s3.589-8 8-8.001C16.411 3.994 20 7.583 20 11.994c-.001 4.411-3.59 8-8 8z"></path>
-              <path d="M12 10.994H8v2h4V16l4.005-4.005L12 7.991z"></path>
+
+          <div class="flex flex-row w-full justify-center items-center">
+            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700 animate-[spin_3s_linear_infinite]">
+              <path
+                class="asterisk"
+                d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
+              />
+            </svg>
+            <p class="uppercase tracking-wide group-hover:text-red-700 group-hover:duration-200">See my favorite projects</p>
+            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700 animate-[spin_3s_linear_infinite_reverse]">
+              <path
+                class="asterisk"
+                d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
+              />
             </svg>
           </div>
 
           <figure class="dev w-full mt-[4vw] relative">
-            <img src="/dev-academy/img/team.jpg" class="" alt="Dev cohort Kahu" />
+            <img src="/dev-academy/img/team.jpg" class="group-hover:invert-20 group-hover:duration-200 w-full" alt="Dev cohort Kahu" />
             <img src="/dev-academy/img/dev-academy-logo.jpg" alt="Dev Academy Logo" class="md:w-10vw absolute top-0 right-0 md:top-[-1vw] md:right-[-1vw]" />
           </figure>
         </a>
       </section>
 
-      <section class="spotzer-css text-white bg-blue-950 p-[20px] md:p-[6vw]" id="spotzer">
-        <a href="./portfolio-spotzer/" class="flex flex-col w-full text-center items-center">
+      <section class="spotzer-css text-white bg-blue-950 p-[20px] md:p-[6vw] group hover:bg-[#040433] hover:duration-200" id="spotzer">
+        <a href="./portfolio-spotzer/" target="_blank" class="flex flex-col w-full text-center items-center">
           <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
             <p class="text-lg">2017 - 2022</p>
             <h2 class="text-2xl md:text-8xl py-[4vw]">Web <span>Designer</span></h2>
-            <a href="../portfolio-spotzer/" class="" target="_blank">
-              <div class="flex flex-row w-full justify-center items-center">
-                <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700">
-                  <path
-                    class="asterisk"
-                    d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
-                  />
-                </svg>
-                <p class="">See my work at Spotzer Digital</p>
-                <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700">
-                  <path
-                    class="asterisk"
-                    d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
-                  />
-                </svg>
-              </div>
-            </a>
+
+            <div class="flex flex-row w-full justify-center items-center">
+              <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700 animate-[spin_3s_linear_infinite]">
+                <path
+                  class="asterisk"
+                  d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
+                />
+              </svg>
+              <p class="uppercase tracking-wide">See my work at Spotzer Digital</p>
+              <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700 animate-[spin_3s_linear_infinite_reverse]">
+                <path
+                  class="asterisk"
+                  d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
+                />
+              </svg>
+            </div>
           </div>
         </a>
       </section>
