mod for 4k screen

--- a/portfolio-spotzer/index.html
+++ b/portfolio-spotzer/index.html
@@ -38,7 +38,7 @@
           In 2019 my logo and identity concept was chosen for a new digital product incentive. Providing customers with the opportunity to hire professional web designers to build their website, on the Wix platform, this product required a friendly, approachable, professional brand identity below.
         </p>
 
-        <a href="../portfolio-wixbuilders/" class="mt-[40px] hover:text-red-400 hover:duration-200 duration-200 hover:ease-in hover:fill-red-400 fill-red-700" target="_blank">
+        <a href="../portfolio-wixbuilders/" class="w-full mt-[40px] hover:text-red-400 hover:duration-200 duration-200 hover:ease-in hover:fill-red-400 fill-red-700" target="_blank">
           <div class="flex flex-row w-full justify-center items-center">
             <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[60px] md:w-[6vw] animate-[spin_3s_linear_infinite]">
               <path
@@ -169,13 +169,13 @@
       <div class="flex flex-col px-[20px] py-[40px] md:px-[4vw] md:py-[6vw] text-center items-center bg-blue-900 w-[90%]">
         <img src="img/logo-white.svg" alt="'company logo image" class="w-[200px] md:w-[18vw]" />
         <h2 class="text-3xl md:text-8xl pb-[4vw]">Employee <br /><span>of the Month</span></h2>
-        <p class="md:w-[80%] text-lg mb-[2vw]">
+        <p class="md:w-[80%] mb-[2vw]">
           "Jennifer is our rock. There is not one issue she cannot solve. Her sharp mind, precision, and critical thinking combined with her willingness to help make her an absolute legend. Jennifer is always consistent and does all she can to help and improve the business as a whole. Thank you,
           Jennifer!"
         </p>
         <p>August 2021, Production Department</p>
 
-        <div class="flex flex-col md:flex-row mt-[4vw]">
+        <div class="flex flex-col md:flex-row mt-[4vw] w-full">
           <div class="media-box w-[full] md:w-[30%]"><img src="img/spotzer.01.jpg" alt="xx" class="w-full pb-[10px] md:pb-0 md:pe-[1vw]" /></div>
           <div class="w-[full] md:w-[40%]"><img src="img/spotzer.02.jpg" alt="xx" class="w-full pb-[10px] md:pb-0 md:px-[.5vw]" /></div>
           <div class="media-box w-[full] md:w-[30%]"><img src="img/spotzer.03.jpg" alt="xx" class="w-full md:ps-[1vw]" /></div>
@@ -192,13 +192,13 @@
         </p>
       </div>
       <div class="flex flex-col md:flex-row mt-[4vw] w-full">
-        <a href="http://des3296.wpengine.com/" target="_blank">
+        <a href="http://des3296.wpengine.com/" target="_blank" class="w-full">
           <img src="img/sc-01.jpg" class="w-full pb-[10px] md:pb-0 md:pe-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
-        <a href="http://des3313.wpengine.com/" target="_blank">
+        <a href="http://des3313.wpengine.com/" target="_blank" class="w-full">
           <img src="img/sc-02.jpg" class="w-full pb-[10px] md:pb-0 md:px-[.5vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
-        <a href="https://spotzerdig2.wpengine.com/" target="_blank">
+        <a href="https://spotzerdig2.wpengine.com/" target="_blank" class="w-full">
           <img src="img/sc-04.jpg" class="w-full md:ps-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
       </div>
@@ -213,13 +213,13 @@
         </p>
       </div>
       <div class="flex flex-col md:flex-row mt-[4vw] w-full">
-        <a href="https://u1266137.mono.net/" target="_blank">
+        <a href="https://u1266137.mono.net/" target="_blank" class="w-full">
           <img src="img/temp-04.jpg" class="w-full pb-[10px] md:pb-0 md:pe-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
-        <a href="https://u1266137.mono.net/" target="_blank">
+        <a href="https://u1266137.mono.net/" target="_blank" class="w-full">
           <img src="img/temp-07.jpg" class="w-full pb-[10px] md:pb-0 md:px-[.5vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
-        <a href="https://u1266137.mono.net/" target="_blank">
+        <a href="https://u1266137.mono.net/" target="_blank" class="w-full">
           <img src="img/temp-05.jpg" class="w-full md:ps-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
       </div>
