progress towards finish line

--- a/portfolio-dev-academy/index.html
+++ b/portfolio-dev-academy/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
-    <title>Jen Harper dev Academy</title>
+    <title>Dev Academy Jen Harper</title>
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
     <link href="../src/output.css" rel="stylesheet" />
   </head>
@@ -104,7 +104,7 @@
         </div>
       </a>
 
-      <div class="flex flex-row justify-center w-full">
+      <div class="flex flex-row justify-end w-full">
         <a href="/" class="inline-flex p-0 group" aria-label="Anchor tag to home page">
           <figure class="p-0">
             <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-700 w-[100px] h-[100px] lg:w-[6vw] lg:h-[6vw] group-hover:fill-red-400 group-hover:ease-in group-hover:duration-200">
