--- a/portfolio-spotzer/index.html
+++ b/portfolio-spotzer/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
     <meta property="image" content="https://jenniferharper.github.io/portfolio/img/jh-logo-new.svg" />
-    <title>Portfolio Jen Harper</title>
-    <link rel="icon" href="img/favicon.svg" type="image/x-icon" />
-
+    <title>Spotzer Jen Harper</title>
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon" />
     <link href="../src/output.css" rel="stylesheet" />
   </head>
   <body class="spotzer-css bg-[#e9e4de] text-[#040433] text-[1em] px-[20px] md:px-[4vw] py-[20px] md:py-[4vw]">
@@ -16,7 +15,7 @@
       <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
         <h1 class="pb-[4vw] text-3xl md:text-9xl leading-[1.1]">Web<br /><span> Designer</span> @ Spotzer Digital</h1>
         <p class="md:w-[80%]">
-          From August 2017 to December 2021 I worked as a Web Designer at Spotzer, an award winning digital marketing company based in Amsterdam. My position as a Internediate Web Designer included responsibilities such as establishing design guidelines, promoting best practices within the business,
+          From August 2017 to December 2021 I worked as a Web Designer at Spotzer, an award winning digital marketing company based in Amsterdam. My position as a Intermediate Web Designer included responsibilities such as establishing design guidelines, promoting best practices within the business,
           training offshore vendors, providing QA feedback and iterating the digital products we built, on platforms such as Wordpress, Webflow and Wix
         </p>
       </div>
@@ -27,7 +26,7 @@
         <p class="text-lg">2017 - 2022</p>
         <h2 class="text-3xl md:text-8xl pb-[4vw]">Career <br /><span>Highlights</span></h2>
         <p class="md:w-[80%]">
-          As I grew towards becoming a Senior Designer within the company, I was given the opportunity to work on inhouse projects. Over time I worked directly with senior management in developing and rebranding our company's identity, as well as being the lead designer on the two project examples
+          As I grew towards becoming a Senior Designer within the company, I was given the opportunity to work on in house projects. Over time I worked directly with senior management in developing and rebranding our company's identity, as well as being the lead designer on the two project examples
           below.
         </p>
       </div>
