progress on ambitious

--- a/portfolio-ambitious/index.html
+++ b/portfolio-ambitious/index.html
@@ -117,13 +117,12 @@
             </div>
           </div>
 
-          <div class="flex flex-col md:flex-row md:flex-wrap mt-[4vw]">
-            <div class="w-full md:w-[30%] mt-[6vw] md:pe-[1vw]">
-              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-            </div>
-            <div class="w-full md:w-[70%] mt-[6vw] md:ps-[1vw]">
-              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+          <div class="flex flex-col md:flex-row md:flex-wrap mt-[6vw]" id="gentle-pin">
+            <a href="https://www.fenestra.co.nz/visualisation" class="w-full md:w-[30%] md:pe-[1vw]">
+              <img src="/img/urbanhub-website.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+            </a>
+            <div class="w-full md:w-[70%] md:ps-[1vw] bg-red-300 overflow-hidden relative">
+              <img src="/img/GD-Hero.webp" alt="Website hero image for Fenestra" class="w-[100%] animated" />
             </div>
           </div>
 
@@ -139,11 +138,23 @@
           </div>
 
           <div class="flex flex-col md:flex-row md:flex-wrap mt-[4vw]">
-            <div class="w-full md:w-[70%] mt-[6vw] md:pe-[1vw]">
-              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
-            </div>
+            <a href="https://hapaipublic.org.nz/" target="_blank" class="w-full md:w-[70%] mt-[6vw] md:pe-[1vw]">
+              <img src="/img/hapai-public.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+            </a>
             <div class="w-full md:w-[30%] mt-[6vw] md:ps-[1vw]">
-              <img src="/img/fenestra.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+              <a href="https://www.fenestra.co.nz/visualisation" target="_blank">
+                <img src="/img/fenestra-vis-tool.webp" alt="Website hero image for Fenestra" class="w-[100%] mb-[10px] md:mb-[1vw]" />
+              </a>
+
+              <a href="https://www.lgcreative.co.nz/" target="_blank">
+                <img src="/img/LGcreative.webp" alt="Website hero image for Fenestra" class="w-[100%] mb-[10px] md:mb-[1vw]" />
+              </a>
+
+              <img src="/img/wellyfun.webp" alt="Website hero image for Fenestra" class="w-[100%] mb-[10px] md:mb-[1vw]" />
+
+              <a href="https://www.pitchdeck.co.nz/" target="_blank">
+                <img src="/img/Pitchdeck.webp" alt="Website hero image for Fenestra" class="w-[100%]" />
+              </a>
             </div>
           </div>
         </section>
