Ambitious QA complete

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section class="flex flex-col py-[20px] md:py-[12vw] text-center items-center w-full" id="me">
         <h1 class="pb-[4vw] text-4xl md:text-9xl leading-[1.1]">Jennifer <span>Harper</span></h1>
         <p class="md:w-[80%]">
-          Hi, I'm Jen — a front-end developer and web designer based in Wellington. With a keen eye for design and an attention to detail edging on obsessive, I specialise in building engaging web applications, crafting user-friendly experiences, and solving UX challenges. Explore my timeline and
+          Hi, I'm Jen — a front-end developer and web designer based in Wellington. With a keen eye for design and an attention to detail (edging on obsessive), I specialise in building engaging web applications, crafting user-friendly experiences, and solving UX challenges. Explore my timeline and
           work experience below, or feel free to connect with me on LinkedIn!
         </p>
       </section>
