home, dev and ambitious complete

--- a/portfolio-ambitious/index.html
+++ b/portfolio-ambitious/index.html
@@ -162,7 +162,7 @@
           </div>
         </section>
 
-        <div class="flex flex-row justify-end w-full p-[20px] md:px-[6vw]">
+        <footer class="flex flex-row justify-end w-full p-[20px] md:px-[6vw]">
           <a href="/" class="inline-flex p-0 group items-center" aria-label="Return to home page">
             <p>Jennifer Harper &copy; <span id="year"></span></p>
             <figure class="p-0 ms-[10px] md:ms-[1vw]">
@@ -173,7 +173,7 @@
               </svg>
             </figure>
           </a>
-        </div>
+        </footer>
       </div>
     </div>
 
