--- a/portfolio-ambitious/index.html
+++ b/portfolio-ambitious/index.html
@@ -183,7 +183,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/CustomEase.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="../js/ScrollSmoother.min.js"></script>
-    <script src="../js/gsap.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/ambitious-gsap.js"></script>
+    <script src="../js/swiper.js"></script>
   </body>
 </html>
