--- a/alastair_protfolio/index.html
+++ b/alastair_protfolio/index.html
@@ -32,6 +32,30 @@
           </div>
         </div>
       </section>
+      <section id="hauraki">
+        <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
+          <div class="lg:max-w-[45vw]">
+            <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Hauraki Townhouses 2026</h2>
+          </div>
+          <div class="lg:max-w-[55vw] lg:px-[4vw]">
+            <p>Design and documentation: Work in progress developed design and resource consent documentation for a 16-unit development in a desirable seaside suburb within Auckland’s Mixed Housing - Urban zone.</p>
+          </div>
+        </div>
+
+        <div class="w-full bg-white p-5">
+          <div>
+            <img src="img/hauraki/Elevation_south.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/Iso_full site.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/Iso_recessionplanes_east.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/Plan_full.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/Section_long.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/view_bedroom.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/view_deck_south.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/view_upper_deck.webp" alt="Alastair Upton Portfolio Image" class="w-full pb-5" />
+            <img src="img/hauraki/view_walkway.webp" alt="Alastair Upton Portfolio Image" class="w-full" />
+          </div>
+        </div>
+      </section>
 
       <section id="macmillian_ave">
         <div class="flex flex-col lg:flex-row justify-between mt-10 lg:mt-[8vw] mb-5 md:mb-10 lg:mb-[2vw] lg:items-end">
@@ -39,10 +63,7 @@
             <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">MacMillian Ave 2026</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
+            <p>Design and documentation: Work in progress to add an accessible semi-independent living area to the ground level of this 1963 Warren and Mahoney house. I prepared drawings for the owners to discuss with a plumber with a view to applying for a building consent or exemption.</p>
           </div>
         </div>
 
@@ -62,10 +83,7 @@
             <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Kandy Crescent Garden 2025</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
+            <p>Design and construction: I designed specified and planted this small front garden to meet a brief for a simple, low maintenance front garden to increase street appeal and fill in for the diminished pōhutukawa.</p>
           </div>
         </div>
 
@@ -92,10 +110,7 @@
             <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Greenhouse 2024</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
+            <p>Design and construction: built using 100% recycled materials to create a flexible enclosure for my personal chilli collection.</p>
           </div>
         </div>
 
@@ -117,10 +132,7 @@
             <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Sandhaimedu 2008</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
+            <p>Design, fundraising and construction: in collaboration with Tim Gittos of Spacecraft Architects, this building was designed in collaboration with teachers and children to be breezy and adaptable.</p>
           </div>
         </div>
 
@@ -145,10 +157,7 @@
             <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Wakefield Quay 2006</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
+            <p>Design and documentation: I designed and detailed the new balustrade for an existing wharf, as a graduate architect at Iriving Jack Architects in collaboration with Ian Jack and a structural engineer.</p>
           </div>
         </div>
 
@@ -175,10 +184,7 @@
             <h2 class="text-[20px] lg:text-[2vw] mb-[.5em] lg:mb-0">Don Edwards 2005</h2>
           </div>
           <div class="lg:max-w-[55vw] lg:px-[4vw]">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid veritatis illo, qui nemo expedita accusamus ex exercitationem, natus odio, aliquam quaerat perferendis. Neque cumque alias consequuntur, tenetur quia aliquid dolores. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Veniam alias minus est! Sunt, suscipit dolores laudantium magni nemo delectus blanditiis doloremque quae nihil quibusdam quis impedit quas in nostrum! Repellat?
-            </p>
+            <p>Design and construction: a shelter built in a workshop and installed in a wildlife sanctuary as part of a design studio class.</p>
           </div>
         </div>
 
